Fix SplashScreen content alignment

--- a/src/Info/SplashScreenRequired/styles.scss
+++ b/src/Info/SplashScreenRequired/styles.scss
@@ -65,8 +65,7 @@ ion-slides#welcome {
 
       .message {
         text-align: left;
-        left: 10vw;
-        top: 20vh;
+        top: 14vh;
       }
     }
 
@@ -92,8 +91,7 @@ ion-slides#welcome {
       background-size: contain;
       .message {
         text-align: left;
-        right: 10vw;
-        bottom: 12vh;
+        bottom: 13vh;
       }
     }
 
